--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="That's a landing page for our first GNL Hack-A-Thon">
     <meta name="author" content="Shylee Ezroni & Alan Golman">
 
-    <title>GNL Hack-A-Thon 2019</title>
+    <title>Great Neck Library Hack-A-Thon 2019</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -159,7 +159,7 @@ th {
     <section id="about" class="container content-section text-center">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h1>GNL Hack-A-Thon</h1>
+          <h1>Great Neck Library Hack-A-Thon</h1>
           <h2>March 1st - March 2nd, 2019</h2>
           <h2><a href="https://docs.google.com/forms/d/1IFQr4Zns95AMdqPfHgCqrEn-vY4hrYbg536SxPnb--0/edit" target="_blank">Register Here!</a></h2>
           <p>Welcome to Great Neck Library's inaugural hackathon! Rest of description blurb to come...</p>
@@ -385,8 +385,8 @@ th {
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; GNPL 2019</p>
-        <p><a href="https://devfe.st/Code%20of%20Conduct%202019.pdf" target="_blank">Code of Conduct</a></p>
+        <p>Copyright &copy; GNL 2019</p>
+        <p><a href="https://docs.google.com/document/d/1WHhQFHGmyOs90due5hu_zdE2Rz7RLg_1Gue0T5YaJrE/edit?usp=sharing" target="_blank">Code of Conduct</a></p>
       </div>
     </footer>
 
