--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@ th {
           <h1>Great Neck Library Hack-A-Thon</h1>
           <h2>March 1st - March 2nd, 2019</h2>
           <h2><a href="https://docs.google.com/forms/d/1IFQr4Zns95AMdqPfHgCqrEn-vY4hrYbg536SxPnb--0/edit" target="_blank">Register Here!</a></h2>
-          <p>Welcome to Great Neck Library's inaugural hackathon! Rest of description blurb to come...</p>
-
+          <p>Welcome to Great Neck Library's inaugural hackathon!</p>
+          <p>More information coming soon...</p>
+          
           <!-- Modal -->
           <div class="modal fade" id="modal" tabindex="-1" role="dialog" >
             <div class="modal-dialog" role="document">
@@ -365,6 +366,7 @@ th {
         <div class="container">
           <div class="col-lg-8 col-lg-offset-2">
             <h1>Sponsors</h1>
+            <p>Coming Soon...</p>
           </div>
         </div>
       </div>
