updated about section with full description

--- a/index.html
+++ b/index.html
@@ -161,10 +161,9 @@ th {
         <div class="col-lg-8 col-lg-offset-2">
           <h1>Great Neck Library Hackathon</h1>
           <h2>March 1st - March 2nd, 2019</h2>
+          <p>Welcome to Great Neck Library's inaugural hackathon! Compete in small teams against your fellow teens to try and see who in a total of 10 hours can create the best, coolest, and most effective tech gizmos that try to solve our Hackathon Challenge. Even if you have never coded before or developed any type of software, this is still the right event for you. In the span of two nights you can begin to learn some of these skills and much more by working hands-on, trying to complete this challenge as you and your teammates feel is best.</p>
+          <p>To Pre-Register, click on the link below to complete our pre-registration form. Already know who you want to work with and they all want to come? Indicate in the form who else will be coming and working with you!</p>
           <h2><a href="https://docs.google.com/forms/d/1IFQr4Zns95AMdqPfHgCqrEn-vY4hrYbg536SxPnb--0/edit" target="_blank">Register Here!</a></h2>
-          <p>Welcome to Great Neck Library's inaugural hackathon!</p>
-          <p>More information coming soon...</p>
-
           <!-- Modal -->
           <div class="modal fade" id="modal" tabindex="-1" role="dialog" >
             <div class="modal-dialog" role="document">
