--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ th {
 
             <div class="row">
               <div class="column">
-                <h2><a href="https://learn.devfe.st/beginner/" target="_blank">Virtual Reality</a></h2>
+                <h2><a href="https://github.com/girlswhocode-gnpl/learn-unity" target="_blank">Virtual Reality</a></h2>
               </div>
               <div class="column">
                 <p>Topics Covered: Oculus Go and Rift, Unity</p>
@@ -231,7 +231,7 @@ th {
 
             <div class="row">
               <div class="column">
-                <h2><a href="https://learn.devfe.st/beginner/" target="_blank">Robotics</a></h2>
+                <h2><a href="https://github.com/girlswhocode-gnpl/learn-robotics" target="_blank">Robotics</a></h2>
               </div>
               <div class="column">
                 <p>Topics Covered: Sphero, Little Bits, Scratch and JavaScript</p>
